welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: '(' expected but identifier found.
  if a==b return 2*(a+b);
     ^sumDouble:3: error: illegal start of simple expression
  else return (a+b) } 
                    ^